hlvm/test/error/range64.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/error/range64.hlx">
  <bundle id="range64">
    <constant id="0001" type="s8"><dec>9223372036854775808</dec></constant>
    <constant id="0002" type="s8"><dec>-9223372036854775809</dec></constant>
    <constant id="0003" type="u8"><hex>ffffffffffffffff</hex></constant>
    <constant id="0004" type="u8"><dec>-1</dec></constant>
  </bundle>
</hlvm>
